melhorias no frontend e reorganizacao de modulos